--- a/choropleth_d3.html
+++ b/choropleth_d3.html
@@ -1,57 +1,440 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Per-County Population, 2015</title>
+	<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+	<script type="text/javascript" src="http://d3js.org/queue.v1.min.js"></script>
+	<script type="text/javascript" src="http://d3js.org/topojson.v1.min.js"></script> 
+</head>
+
+<!-- CSS -->
 <style>
+ 
+	path {
+	 	stroke:white;
+	 	stroke-width: 1px;
+	}
+	 
+	body {
+	 	font-family: 'Proxima Nova', sans-serif;
+	}
+	 
+	.county {
+	 	font: 14px sans-serif;
+	 	font-weight: bold;
+	}
 
-.states {
-  fill: none;
-  stroke: #fff;
-  stroke-linejoin: round;
+	.subheading{
+		text-align: center;
+	}
+	.legend {
+	 	font-size: 14px;
+	 	font-family: 'Proxima Nova', sans-serif;
+	}
+
+	.legend_title {
+	 	font-size: 14px;
+	 	font-family: 'Proxima Nova', sans-serif;
+	 	font-weight: bold;
+	}
+	.population{
+		display:inline-block;
+	}
+	 
+	div.tooltip {
+	 	position: absolute;
+	 	left: 75px;
+	 	text-align: center;
+	 	height: 16px;
+	 	padding: 10px;
+	 	font-size: 14px;
+	 	background: #FFFFFF;
+	 	border: 1px solid #989898;
+ 		pointer-events: none;
+	}
+
+	p {
+		font-family: 'Proxima Nova', sans-serif;
+		font-size:10px;
+		margin: 20px 0 0 10px;
+	}
+
+	@media (max-width: 400px) {
+    .d3map {
+        display: none;
+    }
+
 }
-
 </style>
+
 <body>
-<script src="https:///d3js.org/d3.v3.min.js"></script>
-<script src="https://d3js.org/queue.v1.min.js"></script>
-<script src="https://d3js.org/topojson.v1.min.js"></script>
-<script>
+	<center>
+	<h1 id = "title"><center>Water Consumption By County in USA, 2015</center></h1>
+	<div id = "subheading"><center><b>Data from National Water Census</b></center>  </div>
+		 <script type="text/javascript">
+function popChoro(){
+	document.getElementById("subheading").innerHTML = "County Population".bold();
+	d3.select("svg").remove();
+		var width = 960, height = 600;
+		 var color_domain = [89, 5195, 9128, 13797, 19092, 25963, 37055, 52434, 90837, 203336, 10170292]
+		 var ext_color_domain = [89, 5195, 9128, 13797, 19092, 25963, 37055, 52434, 90837, 203336, 10170292]
+		 var legend_labels = ["89", "5195+", "9128+", "13797+", "19092+", "25963+", "37055+", "52434+", "90837+", "203336+", "10170292"]
+		 var color = d3.scale.threshold()
+		 
+		 .domain(color_domain)
+		 .range(['#bed0fb', '#b0bfec', '#a2afdc', '#96a0cf', '#8a92c2', '#8087b6', '#767bab', '#6c70a0', '#58598b', '#3c3a6c', '#242153', '#151344']);
+		 
+			var div = d3.select("body").append("div")
+		 .attr("class", "tooltip")
+		 .style("opacity", 0);
+		 
+		var svg = d3.select("body").append("svg")
+		 .attr("width", width)
+		 .attr("height", height)
+		 .style("margin", "-15px auto");
+		 var path = d3.geo.path()
+		 
+		queue()
+		 .defer(d3.json, "https://cors-anywhere.herokuapp.com/http://bl.ocks.org/jadiehm/raw/af4a00140c213dfbc4e6/us.json")
+		 .defer(d3.csv, "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/svadivazhagu/04-Remix/master/data/water_counties_cleaned.csv?token=AV4w52hT4ExCApHb4fW2pYQBoeHntGa8ks5cdxfVwA%3D%3D")
+		 .await(ready);
+		 
+		function ready(error, us, data) {
+		 var pairtotal_popWithId = {};
+		 var paircountyWithId = {};
 
-var width = 960,
-    height = 500;
+		//Moves selction to front
+		d3.selection.prototype.moveToFront = function() {
+  			return this.each(function(){
+    		this.parentNode.appendChild(this);
+  			});
+		}; 
 
-var color = d3.scale.threshold()
-    .domain([89, 11236, 25963, 66706, 10170290])
-    .range(["#f2f0f7", "#dadaeb", "#bcbddc", "#9e9ac8", "#756bb1", "#54278f"]);
+		//Moves selction to back
+		d3.selection.prototype.moveToBack = function() { 
+    		return this.each(function() { 
+        	var firstChild = this.parentNode.firstChild; 
+        	if (firstChild) { 
+            	this.parentNode.insertBefore(this, firstChild); 
+        	} 
+    		}); 
+		};
 
-var path = d3.geo.path();
+		data.forEach(function(d) {
+		 pairtotal_popWithId[d.id] = +d.total_pop;
+		 paircountyWithId[d.id] = d.county;
+		 });
+		 svg.append("g")
+		 .attr("class", "county")
+		 .selectAll("path")
+		 .data(topojson.feature(us, us.objects.counties).features)
+		 .enter().append("path")
+		 .attr("d", path)
+		 .style ( "fill" , function (d) {
+		 return color (pairtotal_popWithId[d.id]);
+		 })
+		 .style("opacity", 1)
+		 .on("mouseover", function(d) {
+		 	var sel = d3.select(this);
+  			sel.moveToFront();
+		 d3.select(this).transition().duration(300).style({'opacity': 1, 'stroke': 'cyan', 'stroke-width': 3});
+		 div.transition().duration(300)
+		 .style("opacity", 0.75)
+		 div.text(paircountyWithId[d.id] + ": " + pairtotal_popWithId[d.id])
+		 .style("left", (d3.event.pageX) + "px")
+		 .style("top", (d3.event.pageY -30) + "px");
+		 })
+		 .on("mouseout", function() {
+		 	var sel = d3.select(this);
+  			sel.moveToBack();
+		 d3.select(this)
+		 .transition().duration(300)
+		 .style({'opacity': 1, 'stroke': 'white', 'stroke-width': 2});
+		 div.transition().duration(300)
+		 .style("opacity", 0);
+		 })
+		 
+		 };
+		 
+		var legend = svg.selectAll("g.legend")
+		 .data(ext_color_domain)
+		 .enter().append("g")
+		 .attr("class", "legend");
+		 
+		var ls_w = 73, ls_h = 20;
+		 
+		legend.append("rect")
+		 .attr("x", function(d, i){ return width - (i*ls_w) - ls_w;})
+		 .attr("y", 550)
+		 .attr("width", ls_w)
+		 .attr("height", ls_h)
+		 .style("fill", function(d, i) { return color(d); })
+		 .style("opacity", 0.8);
+		 
+		legend.append("text")
+		 .attr("x", function(d, i){ return width - (i*ls_w) - ls_w;})
+		 .attr("y", 590)
+		 .text(function(d, i){ return legend_labels[i]; });
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
+		 var legend_title = "County Population";
 
-queue()
-    .defer(d3.json, "https://cors-anywhere.herokuapp.com/https://bl.ocks.org/mbostock/raw/4090846/us.json")
-    .defer(d3.csv, "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/svadivazhagu/04-Remix/master/data/water_counties_cleaned.csv?token=AV4w50DepyF0oCZP5m1BxUjfzvjhUF-lks5cdxHawA%3D%3D")
-    .await(ready);
+		 svg.append("text")
+		 .attr("x", 10)
+		 .attr("y", 540)
+		 .attr("class", "legend_title")
+		 .text(function(){return legend_title});
+}
+function waterChoro(){
+	document.getElementById("subheading").innerHTML = "Water Use".bold();
+	d3.select("svg").remove();
+	var width = 960, height = 600;
+		 var color_domain = [89, 5195, 9128, 13797, 19092, 25963, 37055, 52434, 90837, 203336, 10170292]
+		 var ext_color_domain = [89, 5195, 9128, 13797, 19092, 25963, 37055, 52434, 90837, 203336, 10170292]
+		 var legend_labels = ["89", "5000+", "9000+", "14000+", "19000+", "26000+", "37000+", "52000+", "91000+", "200000+", "10170292"]
+		 var color = d3.scale.threshold()
+		 
+		 .domain(color_domain)
+		 .range(['#bed0fb', '#b0bfec', '#a2afdc', '#96a0cf', '#8a92c2', '#8087b6', '#767bab', '#6c70a0', '#58598b', '#3c3a6c', '#242153', '#151344']);
+		 
+			var div = d3.select("body").append("div")
+		 .attr("class", "tooltip")
+		 .style("opacity", 0);
+		 
+		var svg = d3.select("body").append("svg")
+		 .attr("width", width)
+		 .attr("height", height)
+		 .style("margin", "-15px auto");
+		 var path = d3.geo.path()
+		 
+		queue()
+		 .defer(d3.json, "https://cors-anywhere.herokuapp.com/http://bl.ocks.org/jadiehm/raw/af4a00140c213dfbc4e6/us.json")
+		 .defer(d3.csv, "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/svadivazhagu/04-Remix/master/data/water_counties_cleaned.csv?token=AV4w52hT4ExCApHb4fW2pYQBoeHntGa8ks5cdxfVwA%3D%3D")
+		 .await(ready);
+		 
+		function ready(error, us, data) {
+		 var pairtotal_popWithId = {};
+		 var paircountyWithId = {};
 
-function ready(error, us, unemployment) {
-  if (error) throw error;
+		//Moves selction to front
+		d3.selection.prototype.moveToFront = function() {
+  			return this.each(function(){
+    		this.parentNode.appendChild(this);
+  			});
+		}; 
 
-  var total_popById = {};
+		//Moves selction to back
+		d3.selection.prototype.moveToBack = function() { 
+    		return this.each(function() { 
+        	var firstChild = this.parentNode.firstChild; 
+        	if (firstChild) { 
+            	this.parentNode.insertBefore(this, firstChild); 
+        	} 
+    		}); 
+		};
 
-  unemployment.forEach(function(d) { total_popById[d.id] = +d.total_pop; });
+		data.forEach(function(d) {
+		 pairtotal_popWithId[d.id] = +d.total_pop;
+		 paircountyWithId[d.id] = d.county;
+		 });
+		 svg.append("g")
+		 .attr("class", "county")
+		 .selectAll("path")
+		 .data(topojson.feature(us, us.objects.counties).features)
+		 .enter().append("path")
+		 .attr("d", path)
+		 .style ( "fill" , function (d) {
+		 return color (pairtotal_popWithId[d.id]);
+		 })
+		 .style("opacity", 1)
+		 .on("mouseover", function(d) {
+		 	var sel = d3.select(this);
+  			sel.moveToFront();
+		 d3.select(this).transition().duration(300).style({'opacity': 1, 'stroke': 'cyan', 'stroke-width': 3});
+		 div.transition().duration(300)
+		 .style("opacity", 0.75)
+		 div.text(paircountyWithId[d.id] + ": " + pairtotal_popWithId[d.id])
+		 .style("left", (d3.event.pageX) + "px")
+		 .style("top", (d3.event.pageY -30) + "px");
+		 })
+		 .on("mouseout", function() {
+		 	var sel = d3.select(this);
+  			sel.moveToBack();
+		 d3.select(this)
+		 .transition().duration(300)
+		 .style({'opacity': 1, 'stroke': 'white', 'stroke-width': 2});
+		 div.transition().duration(300)
+		 .style("opacity", 0);
+		 })
+		 
+		 };
+		 
+		var legend = svg.selectAll("g.legend")
+		 .data(ext_color_domain)
+		 .enter().append("g")
+		 .attr("class", "legend");
+		 
+		var ls_w = 73, ls_h = 20;
+		 
+		legend.append("rect")
+		 .attr("x", function(d, i){ return width - (i*ls_w) - ls_w;})
+		 .attr("y", 550)
+		 .attr("width", ls_w)
+		 .attr("height", ls_h)
+		 .style("fill", function(d, i) { return color(d); })
+		 .style("opacity", 0.8);
+		 
+		legend.append("text")
+		 .attr("x", function(d, i){ return width - (i*ls_w) - ls_w;})
+		 .attr("y", 590)
+		 .text(function(d, i){ return legend_labels[i]; });
 
-  svg.append("g")
-      .attr("class", "counties")
-    .selectAll("path")
-      .data(topojson.feature(us, us.objects.counties).features)
-    .enter().append("path")
-      .attr("d", path)
-      .style("fill", function(d) { return color(total_popById[d.id]); });
+		 var legend_title = "gal/day";
 
-  svg.append("path")
-      .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a.id !== b.id; }))
-      .attr("class", "states")
-      .attr("d", path);
+		 svg.append("text")
+		 .attr("x", 10)
+		 .attr("y", 540)
+		 .attr("class", "legend_title")
+		 .text(function(){return legend_title});
+	
 }
 
-</script>
+function perCapitaChoro(){
+	document.getElementById("subheading").innerHTML = "Water Use Per Capita".bold();
+	d3.select("svg").remove();
+	var width = 960, height = 600;
+		 var color_domain = [89, 5195, 9128, 13797, 19092, 25963, 37055, 52434, 90837, 203336, 10170292]
+		 var ext_color_domain = [89, 5195, 9128, 13797, 19092, 25963, 37055, 52434, 90837, 203336, 10170292]
+		 var legend_labels = ["89", "5195+", "9128+", "13797+", "19092+", "25963+", "37055+", "52434+", "90837+", "203336+", "10170292"]
+		 var color = d3.scale.threshold()
+		 
+		 .domain(color_domain)
+		 .range(['#bed0fb', '#b0bfec', '#a2afdc', '#96a0cf', '#8a92c2', '#8087b6', '#767bab', '#6c70a0', '#58598b', '#3c3a6c', '#242153', '#151344']);
+		 
+			var div = d3.select("body").append("div")
+		 .attr("class", "tooltip")
+		 .style("opacity", 0);
+		 
+		var svg = d3.select("body").append("svg")
+		 .attr("width", width)
+		 .attr("height", height)
+		 .style("margin", "-15px auto");
+		 var path = d3.geo.path()
+		 
+		queue()
+		 .defer(d3.json, "https://cors-anywhere.herokuapp.com/http://bl.ocks.org/jadiehm/raw/af4a00140c213dfbc4e6/us.json")
+		 .defer(d3.csv, "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/svadivazhagu/04-Remix/master/data/water_counties_cleaned.csv?token=AV4w52hT4ExCApHb4fW2pYQBoeHntGa8ks5cdxfVwA%3D%3D")
+		 .await(ready);
+		 
+		function ready(error, us, data) {
+		 var pairtotal_popWithId = {};
+		 var paircountyWithId = {};
+
+		//Moves selction to front
+		d3.selection.prototype.moveToFront = function() {
+  			return this.each(function(){
+    		this.parentNode.appendChild(this);
+  			});
+		}; 
+
+		//Moves selction to back
+		d3.selection.prototype.moveToBack = function() { 
+    		return this.each(function() { 
+        	var firstChild = this.parentNode.firstChild; 
+        	if (firstChild) { 
+            	this.parentNode.insertBefore(this, firstChild); 
+        	} 
+    		}); 
+		};
+
+		data.forEach(function(d) {
+		 pairtotal_popWithId[d.id] = +d.total_pop;
+		 paircountyWithId[d.id] = d.county;
+		 });
+		 svg.append("g")
+		 .attr("class", "county")
+		 .selectAll("path")
+		 .data(topojson.feature(us, us.objects.counties).features)
+		 .enter().append("path")
+		 .attr("d", path)
+		 .style ( "fill" , function (d) {
+		 return color (pairtotal_popWithId[d.id]);
+		 })
+		 .style("opacity", 1)
+		 .on("mouseover", function(d) {
+		 	var sel = d3.select(this);
+  			sel.moveToFront();
+		 d3.select(this).transition().duration(300).style({'opacity': 1, 'stroke': 'cyan', 'stroke-width': 3});
+		 div.transition().duration(300)
+		 .style("opacity", 0.75)
+		 div.text(paircountyWithId[d.id] + ": " + pairtotal_popWithId[d.id])
+		 .style("left", (d3.event.pageX) + "px")
+		 .style("top", (d3.event.pageY -30) + "px");
+		 })
+		 .on("mouseout", function() {
+		 	var sel = d3.select(this);
+  			sel.moveToBack();
+		 d3.select(this)
+		 .transition().duration(300)
+		 .style({'opacity': 1, 'stroke': 'white', 'stroke-width': 2});
+		 div.transition().duration(300)
+		 .style("opacity", 0);
+		 })
+		 
+		 };
+		 
+		var legend = svg.selectAll("g.legend")
+		 .data(ext_color_domain)
+		 .enter().append("g")
+		 .attr("class", "legend");
+		 
+		var ls_w = 73, ls_h = 20;
+		 
+		legend.append("rect")
+		 .attr("x", function(d, i){ return width - (i*ls_w) - ls_w;})
+		 .attr("y", 550)
+		 .attr("width", ls_w)
+		 .attr("height", ls_h)
+		 .style("fill", function(d, i) { return color(d); })
+		 .style("opacity", 0.8);
+		 
+		legend.append("text")
+		 .attr("x", function(d, i){ return width - (i*ls_w) - ls_w;})
+		 .attr("y", 590)
+		 .text(function(d, i){ return legend_labels[i]; });
+
+		 var legend_title = "gal/person/day";
+
+		 svg.append("text")
+		 .attr("x", 10)
+		 .attr("y", 540)
+		 .attr("class", "legend_title")
+		 .text(function(){return legend_title});
+}
+
+		</script>
+	</center>
+<p><i>Source: U.S. Census, 2015</i></p>		
+</body>
+<div id="population">
+	<input name="updateButton" 
+           type="button" 
+           value="Population" 
+           onclick="popChoro()" />
+</div>
+<div id="population">
+    <input name="updateButton" 
+           type="button" 
+           value="Groundwater" 
+           onclick="waterChoro()" />
+</div>
+<div id="population">
+    <input name="updateButton" 
+           type="button" 
+           value="Per Capita" 
+           onclick="perCapitaChoro()" />
+</div>
+
+
+
+</html>
