--- a/index.html
+++ b/index.html
@@ -64,58 +64,11 @@
 	}
 
 	p {
-		font-family: 'Proxima Nova', sans-serif;
+		font-family: 'Arial', sans-serif;
 		font-size: 10px;
 		margin: 20px 0 0 10px;
 	}
 
-	/* The slider */
-	.slider {
-		position: absolute;
-		cursor: pointer;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-color: #ccc;
-		-webkit-transition: .4s;
-		transition: .4s;
-	}
-
-	.slider:before {
-		position: absolute;
-		content: "";
-		height: 26px;
-		width: 26px;
-		left: 4px;
-		bottom: 4px;
-		background-color: white;
-		-webkit-transition: .4s;
-		transition: .4s;
-	}
-
-	input:checked+.slider {
-		background-color: #2196F3;
-	}
-
-	input:focus+.slider {
-		box-shadow: 0 0 1px #2196F3;
-	}
-
-	input:checked+.slider:before {
-		-webkit-transform: translateX(26px);
-		-ms-transform: translateX(26px);
-		transform: translateX(26px);
-	}
-
-	/* Rounded sliders */
-	.slider.round {
-		border-radius: 34px;
-	}
-
-	.slider.round:before {
-		border-radius: 50%;
-	}
 
 	@media (max-width: 400px) {
 		.d3map {
@@ -150,8 +103,6 @@
 
 				
 				var width = 960, height = 600;
-				// var color_domain = [89, 5195, 9128, 13797, 19092, 25963, 37055, 52434, 90837, 203336, 10170292]
-				// var ext_color_domain = [89, 5195, 9128, 13797, 19092, 25963, 37055, 52434, 90837, 203336, 10170292]
 				var legend_labels = ["< 89", "5k", "9k+", "14k+", "19k+", "26k+", "37k+", "52k+", "91k+", "200k", "1m+"]
 
 				var color = d3.scale.linear()
@@ -232,47 +183,16 @@
 							sel.moveToBack();
 							d3.select(this)
 								.transition().duration(300)
-							// .style({ 'opacity': 1, 'stroke': 'white', 'stroke-width': 2 });
 							div.transition().duration(300)
 								.style("opacity", 0);
 						})
 
 				};
 
-				// var legend = svg.selectAll("g.legend")
-				// 	.data(legend_labels)
-				// 	.enter().append("g")
-				// 	.attr("class", "legend");
-
-				// var ls_w = 73, ls_h = 20;
-
-				// legend.append("rect")
-				// 	.attr("x", function (d, i) { return width - (i * ls_w) - ls_w; })
-				// 	.attr("y", 550)
-				// 	.attr("width", ls_w)
-				// 	.attr("height", ls_h)
-				// 	.style("fill", function (d, i) { return color(d); })
-				// 	.style("opacity", 0.8);
-
-				// legend.append("text")
-				// 	.attr("x", function (d, i) { return width - (i * ls_w) - ls_w; })
-				// 	.attr("y", 590)
-				// 	.text(function (d, i) { return legend_labels[i]; });
-
-				// var legend_title = "County Population";
-
-				// svg.append("text")
-				// 	.attr("x", 10)
-				// 	.attr("y", 540)
-				// 	.attr("class", "legend_title")
-				// 	.text(function () { return legend_title });
 
 				var elem = document.getElementById("scale");
 				var img = document.createElement("img");
 				img.src = "cubehelix.png";
-				var img2 = document.createElement("img2");
-				img2.src = "magma.png";
-				//elem.appendChild(img2)
 				document.getElementById("scale").src = "cubehelix.png";
 
 		
@@ -290,13 +210,6 @@
 				d3.select("svg").remove();
 				var width = 960, height = 600;
 
-				// var color_domain = [0, 250000, 464000, 700000, 1030000, 1460000, 2112000, 3190000, 5686000, 14010000, 817880000]
-				// var ext_color_domain = [0, 250000, 464000, 700000, 1030000, 1460000, 2112000, 3190000, 5686000, 14010000, 817880000]
-				var legend_labels = ['0', '250k', '464k', '700k', '1.03m', '1.5m', '2.1m', '3.2m', '5.7m', '14m', '818m']
-				// var color = d3.scale.threshold()
-
-				// 	.domain(color_domain)
-				// 	.range(['#bed0fb', '#b0bfec', '#a2afdc', '#96a0cf', '#8a92c2', '#8087b6', '#767bab', '#6c70a0', '#58598b', '#3c3a6c', '#242153', '#151344']);
 				var color = d3.scale.linear()
 					.range([0, 1]);
 
@@ -381,36 +294,7 @@
 						})
 
 				};
-
-				// var legend = svg.selectAll("g.legend")
-				// 	.data(legend_labels)
-				// 	.enter().append("g")
-				// 	.attr("class", "legend");
-
-				// var ls_w = 73, ls_h = 20;
-
-				// legend.append("rect")
-				// 	.attr("x", function (d, i) { return width - (i * ls_w) - ls_w; })
-				// 	.attr("y", 550)
-				// 	.attr("width", ls_w)
-				// 	.attr("height", ls_h)
-				// 	.style("fill", function (d, i) { return color(d); })
-				// 	.style("opacity", 0.8);
-
-				// legend.append("text")
-				// 	.attr("x", function (d, i) { return width - (i * ls_w) - ls_w; })
-				// 	.attr("y", 590)
-				// 	.text(function (d, i) { return legend_labels[i]; });
-
-				// var legend_title = "County Population";
-
-				// svg.append("text")
-				// 	.attr("x", 10)
-				// 	.attr("y", 540)
-				// 	.attr("class", "legend_title")
-				// 	.text(function () { return legend_title });
-
-				var elem = document.getElementById("scale");
+	var elem = document.getElementById("scale");
 				var img = document.createElement("img");
 				img.src = "magma.png";
 				var img2 = document.createElement("img2");
