working on the readme and cleaning up

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<center>Water Consumption by County in USA, 2015</center>
 		</h1>
 		<div id="subheading">
-			<center><b>Data from National Water Census</b></center>
+			<center><b>Hover over each county to interact!</b></center>
 		</div>
 		<img id="scale" />
 
@@ -456,10 +456,10 @@
 	<input name="updateButton" type="button" value="Population" onclick="popChoro()" />
 </div>
 <div id="population">
-	<input name="updateButton" type="button" value="Groundwater" onclick="waterChoro()" />
+	<input name="updateButton" type="button" value="Daily Water Use" onclick="waterChoro()" />
 </div>
 <div id="population">
-	<input name="updateButton" type="button" value="Per Capita" onclick="perCapitaChoro()" />
+	<input name="updateButton" type="button" value="Water Use per Capita" onclick="perCapitaChoro()" />
 </div>
 
 
