--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 				queue()
 					.defer(d3.json, "https://cors-anywhere.herokuapp.com/https://bl.ocks.org/jadiehm/raw/af4a00140c213dfbc4e6/us.json")
-					.defer(d3.csv, "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/svadivazhagu/04-Remix/master/data/water_counties_cleaned.csv?token=AV4w52hT4ExCApHb4fW2pYQBoeHntGa8ks5cdxfVwA%3D%3D")
+					.defer(d3.csv, "https://gist.githubusercontent.com/svadivazhagu/45da5ef51239a3318de3728ec0db00cb/raw/c80fec4240419e7a3e532f9f9d4933014579ad4d/gistfile1.csv")
 					.await(ready);
 
 				function ready(error, us, data) {
@@ -227,7 +227,7 @@
 
 				queue()
 					.defer(d3.json, "https://cors-anywhere.herokuapp.com/https://bl.ocks.org/jadiehm/raw/af4a00140c213dfbc4e6/us.json")
-					.defer(d3.csv, "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/svadivazhagu/04-Remix/master/data/water_counties_cleaned.csv?token=AV4w52hT4ExCApHb4fW2pYQBoeHntGa8ks5cdxfVwA%3D%3D")
+					.defer(d3.csv, "https://gist.githubusercontent.com/svadivazhagu/45da5ef51239a3318de3728ec0db00cb/raw/c80fec4240419e7a3e532f9f9d4933014579ad4d/gistfile1.csv")
 					.await(ready);
 
 				function ready(error, us, data) {
@@ -343,7 +343,7 @@
 
 				queue()
 					.defer(d3.json, "https://cors-anywhere.herokuapp.com/https://bl.ocks.org/jadiehm/raw/af4a00140c213dfbc4e6/us.json")
-					.defer(d3.csv, "https://cors-anywhere.herokuapp.com/https://raw.githubusercontent.com/svadivazhagu/04-Remix/master/data/water_counties_cleaned.csv?token=AV4w52hT4ExCApHb4fW2pYQBoeHntGa8ks5cdxfVwA%3D%3D")
+					.defer(d3.csv, "https://gist.githubusercontent.com/svadivazhagu/45da5ef51239a3318de3728ec0db00cb/raw/c80fec4240419e7a3e532f9f9d4933014579ad4d/gistfile1.csv")
 					.await(ready);
 
 				function ready(error, us, data) {
